# OFCCoin

./: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  (+27 more)
share/: setup.nsi  setup.nsi.in  ui.rc
src/: Makefile  Makefile.am  Makefile.in  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  (+49 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/qt/: Makefile  Makefile.in  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  moc_addressbookpage.cpp  moc_addresstablemodel.cpp  moc_askpassphrasedialog.cpp  moc_clientmodel.cpp  moc_coincontroldialog.cpp  moc_coincontroltreewidget.cpp  moc_csvmodelwriter.cpp  moc_editaddressdialog.cpp  moc_guiutil.cpp  moc_intro.cpp  moc_macdockiconhandler.cpp  moc_macnotificationhandler.cpp  moc_monitoreddatamapper.cpp  (+109 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  ui_aboutdialog.h  ui_coincontroldialog.h  ui_helpmessagedialog.h  ui_intro.h  ui_optionsdialog.h  ui_overviewpage.h  ui_receivecoinsdialog.h  ui_rpcconsole.h  ui_sendcoinsdialog.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h
src/qt/locale/: ofccoin_ach.ts  ofccoin_af_ZA.ts  ofccoin_ar.ts  ofccoin_be_BY.ts  ofccoin_bg.ts  ofccoin_bs.ts  ofccoin_ca.ts  ofccoin_ca@valencia.ts  ofccoin_ca_ES.ts  ofccoin_cmn.ts  ofccoin_cs.ts  ofccoin_cy.ts  ofccoin_da.ts  ofccoin_de.ts  ofccoin_el_GR.ts  ofccoin_en.qm  ofccoin_en.ts  ofccoin_eo.ts  ofccoin_es.ts  ofccoin_es_CL.ts  ofccoin_es_DO.ts  ofccoin_es_MX.ts  ofccoin_es_UY.ts  ofccoin_et.ts  ofccoin_eu_ES.ts  ofccoin_fa.ts  ofccoin_fa_IR.ts  ofccoin_fi.ts  ofccoin_fr.ts  ofccoin_fr_CA.ts  ofccoin_gl.ts  ofccoin_gu_IN.ts  ofccoin_he.ts  ofccoin_hi_IN.ts  ofccoin_hr.ts  ofccoin_hu.ts  ofccoin_id_ID.ts  ofccoin_it.ts  ofccoin_ja.ts  ofccoin_ka.ts  (+33 more)
src/qt/test/: Makefile.am  Makefile.in  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  Makefile.am  Makefile.in  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_ofccoin.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  (+1 more)
src/test/data/: README.md  base58_keys_invalid.json
(+29 files in other folders)
